ProductInventory/src/objects/Purchase_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Product_Info__c</fullName>
        <label>Product_Info</label>
        <referenceTo>Product_Info__c</referenceTo>
        <relationshipLabel>Purchase_Details</relationshipLabel>
        <relationshipName>Purchase_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>purchase_quantity__c</fullName>
        <label>purchase_quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>purchse_date__c</fullName>
        <label>purchse_date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>total_purchase_price__c</fullName>
        <label>total_purchase_price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase_Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase_Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>